# cpp_development_lib

./: .gitignore  .gitmodules  CMakeLists.txt  build-app.py
3rd_parties/curl/linux/lib/: libcurl.so.4.8.0
3rd_parties/curl/linux/lib/cmake/CURL/: CURLConfig.cmake  CURLConfigVersion.cmake  CURLTargets-release.cmake  CURLTargets.cmake
3rd_parties/curl/linux/lib/pkgconfig/: libcurl.pc
3rd_parties/curl/linux/share/man/man1/: curl-config.1  curl.1  runtests.1  testcurl.1  wcurl.1
3rd_parties/curl/linux/share/man/man3/: CURLINFO_ACTIVESOCKET.3  CURLINFO_APPCONNECT_TIME.3  CURLINFO_APPCONNECT_TIME_T.3  CURLINFO_CAINFO.3  CURLINFO_CAPATH.3  CURLINFO_CERTINFO.3  CURLINFO_CONDITION_UNMET.3  CURLINFO_CONNECT_TIME.3  CURLINFO_CONNECT_TIME_T.3  CURLINFO_CONN_ID.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD.3  CURLINFO_CONTENT_LENGTH_DOWNLOAD_T.3  CURLINFO_CONTENT_LENGTH_UPLOAD.3  CURLINFO_CONTENT_LENGTH_UPLOAD_T.3  CURLINFO_CONTENT_TYPE.3  CURLINFO_COOKIELIST.3  CURLINFO_EARLYDATA_SENT_T.3  CURLINFO_EFFECTIVE_METHOD.3  CURLINFO_EFFECTIVE_URL.3  CURLINFO_FILETIME.3  CURLINFO_FILETIME_T.3  CURLINFO_FTP_ENTRY_PATH.3  CURLINFO_HEADER_SIZE.3  CURLINFO_HTTPAUTH_AVAIL.3  CURLINFO_HTTPAUTH_USED.3  CURLINFO_HTTP_CONNECTCODE.3  CURLINFO_HTTP_VERSION.3  CURLINFO_LASTSOCKET.3  CURLINFO_LOCAL_IP.3  CURLINFO_LOCAL_PORT.3  CURLINFO_NAMELOOKUP_TIME.3  CURLINFO_NAMELOOKUP_TIME_T.3  CURLINFO_NUM_CONNECTS.3  CURLINFO_OS_ERRNO.3  CURLINFO_POSTTRANSFER_TIME_T.3  CURLINFO_PRETRANSFER_TIME.3  CURLINFO_PRETRANSFER_TIME_T.3  CURLINFO_PRIMARY_IP.3  CURLINFO_PRIMARY_PORT.3  CURLINFO_PRIVATE.3  (+479 more)
3rd_parties/date/linux/include/date/: tz.cpp
3rd_parties/date/linux/lib/cmake/date/: dateConfigVersion.cmake  dateTargets-noconfig.cmake  dateTargets.cmake
3rd_parties/json/linux/share/cmake/nlohmann_json/: nlohmann_jsonTargets.cmake
3rd_parties/json/linux/share/pkgconfig/: nlohmann_json.pc
3rd_parties/libarchive/linux/lib/: libarchive.so.13  libarchive.so.13.8.4
3rd_parties/libarchive/linux/lib/pkgconfig/: libarchive.pc
3rd_parties/libsodium/linux/lib/: libsodium.la  libsodium.so.26.2.0
3rd_parties/libsodium/linux/lib/pkgconfig/: libsodium.pc
3rd_parties/openssl/linux/include/openssl/: asn1.h  bio.h  cmp.h  cms.h  conf.h  configuration.h  crmf.h  crypto.h  fipskey.h  opensslv.h  pkcs12.h  pkcs7.h  ssl.h  x509.h  x509_vfy.h  x509v3.h
3rd_parties/openssl/linux/lib64/: libssl.so.3
3rd_parties/openssl/linux/lib64/pkgconfig/: libcrypto.pc  libssl.pc  openssl.pc
3rd_parties/openssl/linux/share/man/man1/: CA.pl.1ossl  openssl-asn1parse.1ossl  openssl-ca.1ossl  openssl-ciphers.1ossl  openssl-cmds.1ossl  openssl-cmp.1ossl  openssl-cms.1ossl  openssl-crl.1ossl  openssl-crl2pkcs7.1ossl  openssl-dgst.1ossl  openssl-dhparam.1ossl  openssl-dsa.1ossl  openssl-dsaparam.1ossl  openssl-ec.1ossl  openssl-ecparam.1ossl  openssl-enc.1ossl  openssl-engine.1ossl  openssl-errstr.1ossl  openssl-fipsinstall.1ossl  openssl-format-options.1ossl  openssl-gendsa.1ossl  openssl-genpkey.1ossl  openssl-genrsa.1ossl  openssl-info.1ossl  openssl-kdf.1ossl  openssl-list.1ossl  openssl-mac.1ossl  openssl-namedisplay-options.1ossl  openssl-nseq.1ossl  openssl-ocsp.1ossl  openssl-passphrase-options.1ossl  openssl-passwd.1ossl  openssl-pkcs12.1ossl  openssl-pkcs7.1ossl  openssl-pkcs8.1ossl  openssl-pkey.1ossl  openssl-pkeyparam.1ossl  openssl-pkeyutl.1ossl  openssl-prime.1ossl  openssl-rand.1ossl  (+20 more)
3rd_parties/openssl/linux/share/man/man3/: ADMISSIONS.3ossl  ASN1_EXTERN_FUNCS.3ossl  ASN1_INTEGER_get_int64.3ossl  ASN1_INTEGER_new.3ossl  ASN1_ITEM_lookup.3ossl  ASN1_OBJECT_new.3ossl  ASN1_STRING_TABLE_add.3ossl  ASN1_STRING_length.3ossl  ASN1_STRING_new.3ossl  ASN1_STRING_print_ex.3ossl  ASN1_TIME_set.3ossl  ASN1_TYPE_get.3ossl  ASN1_aux_cb.3ossl  ASN1_generate_nconf.3ossl  ASN1_item_d2i_bio.3ossl  ASN1_item_new.3ossl  ASN1_item_sign.3ossl  ASYNC_WAIT_CTX_new.3ossl  ASYNC_start_job.3ossl  BF_encrypt.3ossl  BIO_ADDR.3ossl  BIO_ADDRINFO.3ossl  BIO_connect.3ossl  BIO_ctrl.3ossl  BIO_f_base64.3ossl  BIO_f_buffer.3ossl  BIO_f_cipher.3ossl  BIO_f_md.3ossl  BIO_f_null.3ossl  BIO_f_prefix.3ossl  BIO_f_readbuffer.3ossl  BIO_f_ssl.3ossl  BIO_find_type.3ossl  BIO_get_data.3ossl  BIO_get_ex_new_index.3ossl  BIO_meth_new.3ossl  BIO_new.3ossl  BIO_new_CMS.3ossl  BIO_parse_hostserv.3ossl  BIO_printf.3ossl  (+569 more)
3rd_parties/openssl/linux/share/man/man5/: config.5ossl  fips_config.5ossl  x509v3_config.5ossl
3rd_parties/openssl/linux/share/man/man7/: EVP_ASYM_CIPHER-RSA.7ossl  EVP_ASYM_CIPHER-SM2.7ossl  EVP_CIPHER-AES.7ossl  EVP_CIPHER-ARIA.7ossl  EVP_CIPHER-BLOWFISH.7ossl  EVP_CIPHER-CAMELLIA.7ossl  EVP_CIPHER-CAST.7ossl  EVP_CIPHER-CHACHA.7ossl  EVP_CIPHER-DES.7ossl  EVP_CIPHER-IDEA.7ossl  EVP_CIPHER-NULL.7ossl  (+115 more)
3rd_parties/openssl/linux/ssl/misc/: CA.pl  tsget.pl
notes/: PREBUILTS.txt  diamond_problem.txt  functions_pointer_parameters.txt  git_submodule.txt  pointer_notes.txt  tls_certificate.txt
src/communication/serial_uart/: SerialPort.cpp  SerialPort.h
src/communication/tcp/: TcpAsioClient.cpp  TcpAsioClient.h  TcpAsioServer.cpp  TcpAsioServer.h  TcpAsioSession.cpp  TcpAsioSession.h  TcpAsioUtils.h  TcpClient.cpp  TcpClient.h  TcpCommunication.h  TcpServer.cpp  TcpServer.h
src/communication/tlc/: TlcAsioClient.cpp  TlcAsioClient.h  TlcAsioServer.cpp  TlcAsioServer.h  TlcAsioSession.cpp  TlcAsioSession.h  TlcAsioUtils.h
src/communication/udp/: UdpAsioClient.cpp  UdpAsioClient.h  UdpAsioServer.cpp  UdpAsioServer.h  UdpAsioUtils.h  UdpClient.cpp  UdpClient.h  UdpComm.h  UdpServer.cpp  UdpServer.h
src/data/: ThreadSafeBinaryTree.h  ThreadSafeCircularDoublyLinkedList.h  ThreadSafeCircularLinkedList.h  ThreadSafeDoublyLinkedList.h  ThreadSafeQueue.h  ThreadSafeSingleLinkedList.h  ThreadSafeStack.h
src/sort/: BubbleSort.cpp  BubbleSort.h  InsertionSort.cpp  InsertionSort.h  QuickSort.cpp  QuickSort.h  Sort.h
src/utils/: CheckCompiler.h  Chronometer.cpp  Chronometer.h  Common.cpp  Common.h  FileUtils.cpp  FileUtils.h  Logger.cpp  Logger.h  Timer.cpp  Timer.h  Watch.cpp  Watch.h  picosha2.h
test/: ThreadSafeQueue_test.cpp  ThreadSafeStack_test.cpp
(+83 files in other folders)
